--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Tkesho's Portfolio</title>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+		<link rel="shortcut icons" href="favicon.ico">
 	</head>
 
 	<body>
@@ -86,13 +87,13 @@
 						<div class="end__subtitle">How do you take your coffee?</div>
 						<div class="end__icons">
 							<div class="end__link"><a href="https://github.com/tkesho" target="_blank"><img
-										src="../img/icons/github.svg" alt="Git Hub"></a></div>
+										src="img/icons/github.svg" alt="Git Hub"></a></div>
 							<div class="end__link"><a href="https://www.facebook.com/david.tkeshelashvili.3"
-									target="_blank"><img src="../img/icons/facebook.svg" alt="Facebook"></a></div>
+									target="_blank"><img src="img/icons/facebook.svg" alt="Facebook"></a></div>
 							<div class="end__link"><a href="https://www.instagram.com/_tkesho_/" target="_blank"><img
-										src="../img/icons/instagram.svg" alt="Instagram"></a></div>
+										src="img/icons/instagram.svg" alt="Instagram"></a></div>
 							<div class="end__link"><a href="mailto:dtkeshelashvili07@gmail.com" target="_blank"><img
-										src="../../img/icons/gmail.svg" alt="Mail me"></a></div>
+										src="img/icons/mail.png" alt="Mail me"></a></div>
 						</div>
 					</div>
 					<hr>
