--- a/index.html
+++ b/index.html
@@ -1,113 +1,113 @@
-<doctype html>
-	<html>
+<!DOCTYPE html>
+<html>
 
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width">
-		<title>Tkesho's Portfolio</title>
-		<link rel="stylesheet" href="css/style.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-		<link rel="shortcut icons" href="favicon.ico">
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Tkesho's Portfolio</title>
+	<link rel="stylesheet" href="css/style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+	<link rel="shortcut icon" href="img/favicon.ico">
+</head>
 
-	<body>
-		<div class="content">
-			<header class="header">
-				<div class="header__container">
-					<nav class="nav">
-						<ul class="nav__list">
-							<li><a href="#about">About</a></li>
-							<li><a href="#portfolio">My projects</a></li>
-							<li><a href="#end">contact</a></li>
-						</ul>
-					</nav>
+<body>
+	<div class="content">
+		<header class="header">
+			<div class="header__container">
+				<nav class="nav">
+					<ul class="nav__list">
+						<li><a href="#about">About</a></li>
+						<li><a href="#portfolio">My projects</a></li>
+						<li><a href="#end">contact</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main class="main">
+			<section class="promo" id="about">
+				<div class="promo__title">
+					<h1>Hey, I'm Tkesho</h1>
 				</div>
-			</header>
-			<main class="main">
-				<section class="promo" id="about">
-					<div class="promo__title">
-						<h1>Hey, I'm Tkesho</h1>
-					</div>
-					<div class="promo__subtitle">
-						<h2>a web developer</h2>
-					</div>
-					<div class="promo__arrow"><img src="" alt=""></div>
-				</section>
-				<section class="works" id="portfolio">
-					<div class="container">
-						<div class="works__title">
-							<h2>These are some of my projects</h2>
-						</div>
-						<hr>
-						<div class="works__row">
-							<div class="works__item"><a href="https://tkesho.github.io/Wordpress/"><img
-										src="img/project1.png" alt="project 1" class="works__photo">
-									<p class="works__name"><span class="code">&lsaquo; </span><span
-											class="works__title_cool">Wordpress</span> <span
-											class="code">/&rsaquo;</span></p>
-								</a></div>
-							<div class="works__item"><a href="https://tkesho.github.io/Registration-form/."><img
-										src="img/project2.png" alt="project 2" class="works__photo">
-									<p class="works__name"><span class="code">&lsaquo; </span><span
-											class="works__title_cool">FCC form</span> <span
-											class="code">/&rsaquo;</span></p>
-								</a></div>
-							<div class="works__item"><a href="https://tkesho.github.io/Original-Trombones/"><img
-										src="img/project3.png" alt="project 3" class="works__photo">
-									<p class="works__name"><span class="code">&lsaquo; </span><span
-											class="works__title_cool">Original Trombones</span> <span
-											class="code">/&rsaquo;</span></p>
-								</a></div>
-							<div class="works__item"><a href="https://tkesho.github.io/Dr.-Norman-Borlaug/"><img
-										src="img/project4.png" alt="project 4" class="works__photo">
-									<p class="works__name"><span class="code">&lsaquo; </span><span
-											class="works__title_cool">Dr. borlaug</span> <span
-											class="code">/&rsaquo;</span></p>
-								</a></div>
-							<div class="works__item"><a href="https://tkesho.github.io/Flexbox/"><img
-										src="img/project5.png" alt="project 5" class="works__photo">
-									<p class="works__name"><span class="code">&lsaquo; </span><span
-											class="works__title_cool">Flexbox</span> <span class="code">/&rsaquo;</span>
-									</p>
-								</a></div>
-							<div class="works__item"><a href="https://tkesho.github.io/JS-Documentation/"><img
-										src="img/project6.png" alt="project 6" class="works__photo">
-									<p class="works__name"><span class="code">&lsaquo; </span><span
-											class="works__title_cool">JS Documentation</span> <span
-											class="code">/&rsaquo;</span></p>
-								</a></div>
-						</div><a class="works__link" href="https://codepen.io/tkesho"><span>Show all</span></a>
-					</div>
-				</section>
-				<section class="end">
-					<div class="container">
-						<div class="end__title">
-							<h2 id="end">Let's work together...</h2>
-						</div>
-						<div class="end__subtitle">How do you take your coffee?</div>
-						<div class="end__icons">
-							<div class="end__link"><a href="https://github.com/tkesho" target="_blank"><img
-										src="img/icons/github.svg" alt="Git Hub"></a></div>
-							<div class="end__link"><a href="https://www.facebook.com/david.tkeshelashvili.3"
-									target="_blank"><img src="img/icons/facebook.svg" alt="Facebook"></a></div>
-							<div class="end__link"><a href="https://www.instagram.com/_tkesho_/" target="_blank"><img
-										src="img/icons/instagram.svg" alt="Instagram"></a></div>
-							<div class="end__link"><a href="mailto:dtkeshelashvili07@gmail.com" target="_blank"><img
-										src="img/icons/mail.png" alt="Mail me"></a></div>
-						</div>
+				<div class="promo__subtitle">
+					<h2>a web developer</h2>
+				</div>
+				<div class="promo__arrow"><img src="img/icons/arrow1.png" alt=""></div>
+			</section>
+			<section class="works" id="portfolio">
+				<div class="container">
+					<div class="works__title">
+						<h2>These are some of my projects</h2>
 					</div>
 					<hr>
-					<footer class="footer">
-						<div class="footer__info">created with David Tkeshelashvili</div>
-						<div class="footer__add">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect"
-								title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/"
-								title="Flaticon">www.flaticon.com</a></div>
-					</footer>
-				</section>
-			</main>
-		</div>
-		<script type="text/javascript" src="js/script.js"></script>
-	</body>
+					<div class="works__row">
+						<div class="works__item"><a href="https://tkesho.github.io/Wordpress/"><img
+									src="img/project1.png" alt="project 1" class="works__photo">
+								<p class="works__name"><span class="code">&lsaquo; </span><span
+										class="works__title_cool">Wordpress</span> <span class="code">/&rsaquo;</span>
+								</p>
+							</a></div>
+						<div class="works__item"><a href="https://tkesho.github.io/Registration-form/."><img
+									src="img/project2.png" alt="project 2" class="works__photo">
+								<p class="works__name"><span class="code">&lsaquo; </span><span
+										class="works__title_cool">FCC form</span> <span class="code">/&rsaquo;</span>
+								</p>
+							</a></div>
+						<div class="works__item"><a href="https://tkesho.github.io/Original-Trombones/"><img
+									src="img/project3.png" alt="project 3" class="works__photo">
+								<p class="works__name"><span class="code">&lsaquo; </span><span
+										class="works__title_cool">Original Trombones</span> <span
+										class="code">/&rsaquo;</span></p>
+							</a></div>
+						<div class="works__item"><a href="https://tkesho.github.io/Dr.-Norman-Borlaug/"><img
+									src="img/project4.png" alt="project 4" class="works__photo">
+								<p class="works__name"><span class="code">&lsaquo; </span><span
+										class="works__title_cool">Dr. borlaug</span> <span class="code">/&rsaquo;</span>
+								</p>
+							</a></div>
+						<div class="works__item"><a href="https://tkesho.github.io/Flexbox/"><img src="img/project5.png"
+									alt="project 5" class="works__photo">
+								<p class="works__name"><span class="code">&lsaquo; </span><span
+										class="works__title_cool">Flexbox</span> <span class="code">/&rsaquo;</span>
+								</p>
+							</a></div>
+						<div class="works__item"><a href="https://tkesho.github.io/JS-Documentation/"><img
+									src="img/project6.png" alt="project 6" class="works__photo">
+								<p class="works__name"><span class="code">&lsaquo; </span><span
+										class="works__title_cool">JS Documentation</span> <span
+										class="code">/&rsaquo;</span></p>
+							</a></div>
+					</div><a class="works__link" href="https://codepen.io/tkesho"><span>Show all</span></a>
+				</div>
+			</section>
+			<section class="end">
+				<div class="container">
+					<div class="end__title">
+						<h2 id="end">Let's work together...</h2>
+					</div>
+					<div class="end__subtitle">How do you take your coffee?</div>
+					<div class="end__icons">
+						<div class="end__link"><a href="https://github.com/tkesho" target="_blank"><img
+									src="img/icons/github.svg" alt="Git Hub"></a></div>
+						<div class="end__link"><a href="https://www.facebook.com/david.tkeshelashvili.3"
+								target="_blank"><img src="img/icons/facebook.svg" alt="Facebook"></a></div>
+						<div class="end__link"><a href="https://www.instagram.com/_tkesho_/" target="_blank"><img
+									src="img/icons/instagram.svg" alt="Instagram"></a></div>
+						<div class="end__link"><a href="mailto:dtkeshelashvili07@gmail.com" target="_blank"><img
+									src="img/icons/mail.png" alt="Mail me"></a></div>
+					</div>
+				</div>
+				<hr>
+				<footer class="footer">
+					<div class="footer__info">created with David Tkeshelashvili</div>
+					<div class="footer__add">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect"
+							title="Pixel perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/"
+							title="Flaticon">www.flaticon.com</a></div>
+				</footer>
+			</section>
+		</main>
+	</div>
+	<script type="text/javascript" src="js/script.js"></script>
+</body>
 
-	</html>
-</doctype>
+</html>
+</!DOCTYPE>
