Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 					<div class="end__icons">
 						<div class="end__link"><a href="https://github.com/tkesho" target="_blank"><img
 									src="img/icons/github.svg" alt="Git Hub"></a></div>
-						<div class="end__link"><a href="https://www.facebook.com/david.tkeshelashvili.3"
+						<div class="end__link"><a href="https://www.facebook.com/Tkesho2807"
 								target="_blank"><img src="img/icons/facebook.svg" alt="Facebook"></a></div>
-						<div class="end__link"><a href="https://www.instagram.com/_tkesho_/" target="_blank"><img
+						<div class="end__link"><a href="https://www.instagram.com/davit.tkesho7/" target="_blank"><img
 									src="img/icons/instagram.svg" alt="Instagram"></a></div>
 						<div class="end__link"><a href="mailto:dtkeshelashvili07@gmail.com" target="_blank"><img
 									src="img/icons/mail.png" alt="Mail me"></a></div>
